[gd_scene load_steps=4 format=2]

[ext_resource path="res://data/fonts/8BitWonder_Large.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/Battle.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/battle/BattleGUI.tscn" type="PackedScene" id=3]

[node name="Battle" type="Node2D"]
script = ExtResource( 2 )

[node name="BattleGUI" parent="." instance=ExtResource( 3 )]

[node name="OverlayText" type="CanvasLayer" parent="."]
layer = 5
offset = Vector2( 0, -320 )
transform = Transform2D( 1, 0, 0, 1, 0, -320 )

[node name="CenterContainer" type="CenterContainer" parent="OverlayText"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OverlayText/CenterContainer"]
margin_left = 12.0
margin_top = 148.0
margin_right = 168.0
margin_bottom = 172.0
custom_fonts/font = ExtResource( 1 )
text = "Victory"

[node name="Tween" type="Tween" parent="."]

[connection signal="area_selected" from="BattleGUI" to="." method="_on_BattleGUI_area_selected"]
[connection signal="spawn_minion_requested" from="BattleGUI" to="." method="_on_BattleGUI_spawn_minion_requested"]
